--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="preloader-text">Բեռնվում է...</div>
         </div>
     </div>
-    <div class="wrapper">
+    <div class="wrapper" style="background-color: #f2ede0;">
       <div class="envelope">
         <div class="paper">
           <div id="scroll-indicator">
