Not Last Change

--- a/index.html
+++ b/index.html
@@ -53,16 +53,18 @@
                 <div class="roda__rings">
                   <div class="road__rings--img"></div>
                   <div class="road__rings--texts">
-                    <p class="title">Պսակադրություն</p>
-                    <p class="additional">Գոշավանք 17:30</p>
+                    
+                    <p class="additional">16:00 Պսակադրություն</p>
+                    <p class="title">ԳՈՇԱՎԱՆՔ</p>
                   </div>
                 </div>
 
                 <div class="roda__rings" style="margin-bottom: 20px">
                   <div class="road__caps--img"></div>
                   <div class="road__rings--texts">
-                    <p class="title">Միջոցառում</p>
-                    <p class="additional_">Hover Gardens 16:00</p>
+                    
+                    <p class="additional_">17:30 Միջոցառում</p>
+                    <p class="title">HOVER GARDENS</p>
                   </div>
                 </div>
               </div>
