--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>ՏԻԳՐԱՆ ԵՎ ԳՈՀԱՐ</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="style.new.css" />
   </head>
-  <body>
+  <body  style="background-color: #f2ede0;">
     <div id="preloader">
         <div class="preloader-content">
             <div class="preloader-spinner"></div>
@@ -16,13 +17,13 @@
     </div>
     <div class="wrapper" style="background-color: #f2ede0;">
       <div class="envelope">
-        <div class="paper">
+        <div class="paper" style="max-width: 500px; margin: 0 auto;">
           <div id="scroll-indicator">
             <div class="scroll-indicator-arrow"></div>
             <!-- <div class="scroll-indicator-text">Проведите вбок</div> -->
           </div>
-          <div class="horizontal-scroll-container">
-            <section id="first_screen" class="horizontal-section">
+          <div class="horizontal-scroll-container" style="max-width: 500px; margin: 0 auto;">
+            <section id="first_screen" class="horizontal-section" style="max-width: 500px;">
               <div class="first_screen__top_side">
                 <div class="big_line"></div>
                 <div class="smole_line"></div>
@@ -41,7 +42,7 @@
               </div>
             </section>
 
-            <section class="second_screen horizontal-section">
+            <section class="second_screen horizontal-section" style="max-width: 500px;">
               <div class="big_line"></div>
               <div class="smole_line"></div>
               <p class="names">Երջանկություն նորապսակներին</p>
@@ -100,7 +101,7 @@
               <div class="smole_line"></div>
               <div class="big_line" style="margin-top: 3px"></div>
             </section>
-            <section class="last__screen horizontal-section">
+            <section class="last__screen horizontal-section" style="max-width: 500px;">
               <div class="big_line"></div>
               <div class="smole_line"></div>
 
