--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="assets/style.css" />
     <link rel="stylesheet" href="style.new.css" />
+    <script src="modal.js" defer></script>
   </head>
   <body  style="background-color: #f2ede0;">
     <div id="preloader">
         <div class="preloader-content">
             <div class="preloader-spinner"></div>
             <div class="preloader-text">Բեռնվում է...</div>
+        </div>
+    </div>
+    
+    <div id="thankYouModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-body">
+                <h2>Շնորհակալություն!</h2>
+                <p>Ձեր ներկայությունը կդարձնի մեր օրը առավել հիշարժան և ուրախ։</p>
+                <p>Անհամբեր սպասում ենք Ձեզ!</p>
+                <button class="modal-close">Փակել</button>
+            </div>
         </div>
     </div>
     <div class="wrapper" style="background-color: #f2ede0;">
