--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="thankYouModal" class="modal">
         <div class="modal-content">
             <div class="modal-body">
-                <h2>Շնորհակալություն!</h2>
+                <h2>Շնորհակալությու՜ն</h2>
                 <p>Ձեր ներկայությունը կդարձնի մեր օրը առավել հիշարժան և ուրախ։</p>
                 <p>Անհամբեր սպասում ենք Ձեզ!</p>
                 <button class="modal-close">Փակել</button>
